[package]
name = "mockpit"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A high-performance HTTP mocking engine with templates, recording, consolidation, and GraphQL support"
readme = "../../README.md"
keywords = ["mock", "http", "testing", "api", "fake-data"]
categories = ["development-tools", "web-programming"]
# Integration tests carry large fixtures consumers never need; benches and
# examples are declared targets (removing them breaks the package verify
# build) and assets/ must ship (rust-embed folder).
exclude = ["tests/"]

[features]
default = ["engine"]

# Core mock engine (types + config + matching + registry + templates + consolidator)
# Includes fake-data (template needs it), type-detector and codegen (consolidator needs them)
engine = [
  "fake-data",
  "type-detector",
  "codegen",
]

# Fake data generators (images, PDFs, identity, etc.)
fake-data = [
  "dep:fake",
  "dep:rand",
  "dep:rust-embed",
  "dep:ab_glyph",
  "dep:image",
  "dep:imageproc",
  "dep:lopdf",
]

# Semantic type detection from field names and values
type-detector = []

# Template code generation from detected types
codegen = ["type-detector"]

# GraphQL schema introspection and mock generation
graphql = ["engine", "dep:graphql-parser"]

# HTTP server with hot reload and graceful shutdown
server = ["engine", "dep:axum", "dep:tower-http", "dep:notify", "dep:tokio-tungstenite", "dep:reqwest"]

# Mock management HTTP API (axum router)
api = ["server"]

# Config schema generation (for editor extensions)
schema = ["dep:schemars"]

# JS/TS-scripted mock handlers on an embedded QuickJS engine, with a
# rolldown bundler front-end (TS transpile, node_modules resolution) and
# a bytecode disk cache
scripting = [
  "engine",
  "dep:rquickjs",
  "dep:rquickjs-serde",
  "dep:rolldown",
  "dep:rolldown_common",
  "dep:rolldown_plugin",
  "dep:sourcemap",
]

# Everything
full = ["engine", "graphql", "server", "api", "schema", "scripting"]

[dependencies]
# ---- Always required (engine feature) ----
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling and logging
thiserror = { workspace = true }
tracing = { workspace = true }

# Utilities
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
flate2 = { workspace = true }
globset = { workspace = true }
har = { workspace = true }
json-patch = { workspace = true }
lazy_static = { workspace = true }
lean_string = { workspace = true }
lru = { workspace = true }
nohash-hasher = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }

# HTTP
http = { workspace = true }

# Template engine
tera = { workspace = true }

# ---- Optional dependencies (feature-gated) ----

# Fake data (fake-data feature)
fake = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }
ab_glyph = { workspace = true, optional = true }
image = { workspace = true, optional = true }
imageproc = { workspace = true, optional = true }
lopdf = { workspace = true, optional = true }

# GraphQL (graphql feature)
graphql-parser = { workspace = true, optional = true }

# Server (server feature)
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
# SSE upstream passthrough client (rustls; already a workspace dep via the CLI)
reqwest = { workspace = true, optional = true }

# Schema (schema feature)
schemars = { version = "1", optional = true }

# QuickJS scripting (scripting feature)
rquickjs = { workspace = true, optional = true }
rquickjs-serde = { workspace = true, optional = true }
rolldown = { workspace = true, optional = true }
rolldown_common = { workspace = true, optional = true }
rolldown_plugin = { workspace = true, optional = true }
sourcemap = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
futures = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
tera = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
# WS test client (frames must be masked; this is the standard axum-ws test client)
tokio-tungstenite = { workspace = true }
uuid = { workspace = true }

[[bench]]
name = "mock_performance"
harness = false

[[bench]]
name = "template_performance"
harness = false

[[bench]]
name = "type_detection"
harness = false

[[bench]]
name = "script_performance"
harness = false
required-features = ["scripting"]

# Uses the `graphql` module — only build under the `graphql` feature so default
# `cargo test`/`nextest` runs don't fail to compile it.
[[example]]
name = "test_username_graphql"
required-features = ["graphql"]

[lints]
workspace = true
